# coqui-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
coqui-stt/: Cargo.toml  README.md
coqui-tts/: Cargo.toml  README.md
coqui-tts/src/: lib.rs
tts-testing/: Cargo.toml
tts-testing/src/: main.rs
