[package]
name = "coqui-stt"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Rowan S-L <r@fawkes.io>"]
description = "Bindings to the couqi-ai Speech to Text python library"
homepage = "https://github.com/rowan-sl/coqui-rs/tree/main"
repository = "https://github.com/rowan-sl/coqui-rs/tree/main"
readme = "README.md"
publish = true
keywords = ["speech-to-text", "STT", "coqui-ai"]
catagories = ["science", "api-bindings"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
