[package]
name = "coqui-tts"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Rowan S-L <r@fawkes.io>"]
description = "Bindings to the couqi-ai Text-to-Speech python library"
homepage = "https://github.com/rowan-sl/coqui-rs/tree/main"
repository = "https://github.com/rowan-sl/coqui-rs/tree/main"
readme = "README.md"
publish = true
keywords = ["text-to-speech", "TTS", "coqui-ai"]
categories = ["science", "api-bindings"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.pyo3]
version = "0.16.5"
features = ["auto-initialize"]
